--- a/TradingCompany/TradingCompany/MainWindow.xaml
+++ b/TradingCompany/TradingCompany/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+
+        <Button x:Name="enterButton" Content="Войти" HorizontalAlignment="Center" Margin="0,217,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
